# skelly-jelly

./: .gitignore  CLAUDE.md  CONSISTENCY_UPDATES.md  Cargo.toml  Cargo_full.toml  DEBUG_CHEAT_SHEET.md  DELEGATION_STRATEGY.md  DEMO_README.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_AND_DEBUG_GUIDE.md  INSTALLATION_DEBUG_GUIDE_TEST_REPORT.md  LICENSE  Makefile  NEXT_IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  NEXT_STORIES.md  README.md  README_integrated.md  STORY_1_1_COMPLETION_REPORT.md  STORY_2_1_COMPLETION_REPORT.md  STORY_2_2_INTEGRATION_TEST.md  TASK_BREAKDOWN.md  TEST_RESULTS.md  WAVE_EXECUTION_STRATEGY.md  main.py  package-lock.json  package.json  pyproject.toml  run.sh  start.sh  workspace-dependencies.toml
.cursor/: mcp.json
benchmarks/: Cargo.toml  performance_baselines.rs  run_benchmarks.sh
config/: default.toml  demo.toml
contracts/: README.md  ai-figurine.yaml  analysis-gamification.yaml  gamification-ai.yaml  storage-analysis.yaml
demo/: run_demo.sh
docs/: API_REFERENCE.md  MONOREPO_ARCHITECTURE.md  PROJECT_INDEX.md  QUICK_START.md  architectural-analysis-jul-26.md  architecture-diagram.md  cute-figurine-implementation-guide.md  cute-figurine-integration.md  cute-figurine-task-hierarchy.md  integration-summary.md  skelly-jelly-hld.md  skelly-jelly-schema.md
docs/adr/: 001-event-bus-architecture.md  002-hybrid-rust-typescript.md  003-module-naming-convention.md  README.md  template.md
examples/: integration_demo.rs
modules/analysis-engine/: Cargo.toml  README.md
modules/analysis-engine/examples/: performance_validation_demo.rs
modules/analysis-engine/src/: analysis_engine.rs  error.rs  event_bus_integration.rs  event_processor.rs  lib.rs  metrics.rs  online_learning.rs  performance_validation.rs  sliding_window.rs  state_detection.rs  training_pipeline.rs  types.rs
modules/analysis-engine/src/feature_extraction/: keystroke.rs  mod.rs  mouse.rs  window.rs
modules/analysis-engine/src/inference/: mod.rs
modules/analysis-engine/src/privacy/: local_inference.rs  mod.rs
modules/analysis-engine/src/screenshot/: mod.rs
modules/analysis-engine/tests/: ml_integration_test.rs
modules/cute-figurine/: .eslintrc.json  ANIMATION_SPECIFICATIONS.md  ASSETS_NEEDED.md  ASSET_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  VISUAL_IMPLEMENTATION_GUIDE.md  index.html  package-lock.json  package.json  playwright.config.ts  simple-demo.html  tsconfig.ipc.json  tsconfig.json  vite.config.ts  vitest.config.ts
modules/cute-figurine/playwright-report/: index.html
modules/cute-figurine/src/: index.css  index.ts  ipc_server.ts  main.tsx  setupTests.ts
modules/cute-figurine/src/animation/: AnimationEngine.ts  BlendTree.ts  TransitionManager.ts
modules/cute-figurine/src/core/: skeleton_companion.ts
modules/cute-figurine/test-results/: .last-run.json
modules/data-capture/: Cargo.toml  README.md
modules/data-capture/examples/: manual_test.rs
modules/data-capture/src/: config.rs  error.rs  lib.rs
modules/data-capture/src/monitors/: keystroke.rs  mod.rs  mouse.rs  process.rs  resource.rs  screenshot.rs  window.rs
modules/data-capture/src/platform/: macos.rs  mod.rs
modules/data-capture/src/privacy/: filters.rs  masking.rs  ml_pii_detector.rs  mod.rs
modules/docs/: analysis-engine-module-design.md  cute-figurine-architecture.md  cute-figurine-detailed-breakdown.md  cute-figurine-state-animation.md  data-capture-module-design.md  data-capture-testing.md  data-capture-visual-implementation-guide.md  event-bus-module-design.md  gamification-module-design.md  integration-specifications.md  modules-overview.md  skelly-jelly-ai-integration-module-design.md  skelly-jelly-orchestrator-module-design.md
modules/event-bus/: Cargo.toml  README.md  standalone_error_test.rs
modules/event-bus/examples/: basic_usage.rs
modules/event-bus/src/: bus.rs  circuit_breaker.rs  dead_letter_queue.rs  enhanced_bus.rs  error.rs  error_logging.rs  lib.rs  message.rs  metrics.rs  recovery.rs  registry.rs  retry.rs  router.rs  subscription.rs
modules/event-bus/tests/: error_recovery_integration_test.rs  failure_handling_test.rs  performance_test.rs
modules/gamification/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
modules/gamification/examples/: basic_usage.ts
modules/gamification/src/: GamificationModule.ts  index.ts  ipc_server.ts
modules/gamification/tests/: InterventionController.test.ts
modules/skelly-jelly-ai-integration/: Cargo.toml  README.md
modules/skelly-jelly-ai-integration/examples/: local_inference_example.rs
modules/skelly-jelly-ai-integration/src/: ai_integration.rs  anti_patronization.rs  config.rs  context.rs  context_detection.rs  contextual_interventions.rs  contextual_messaging.rs  error.rs  intervention_timing.rs  lib.rs  llm.rs  personality.rs  personality_enhanced.rs  personality_integration.rs  personality_testing.rs  personality_visual_bridge.rs  privacy.rs  suggestions.rs  types.rs  user_feedback.rs
modules/skelly-jelly-orchestrator/: Cargo.toml  README.md
modules/skelly-jelly-orchestrator/examples/: basic_orchestration.rs
modules/skelly-jelly-orchestrator/src/: config.rs  config_watcher.rs  enhanced_health.rs  error.rs  event_loss_prevention.rs  health.rs  lib.rs  lifecycle.rs  module_registry.rs  orchestrator.rs  performance_telemetry.rs  recovery.rs  resource.rs  resource_management_integration_test.rs  startup.rs
modules/skelly-jelly-orchestrator/tests/: orchestration_integration_test.rs
modules/storage/: BUILD.bazel  Cargo.toml  DESIGN.md  README.md
modules/storage/src/: audit_logger.rs  batch_manager.rs  config.rs  database.rs  encryption.rs  error.rs  event_receiver.rs  lib.rs  metrics.rs  privacy_api.rs  screenshot_manager.rs  storage_module.rs  types.rs
modules/storage/tests/: integration_test.rs
scripts/: check-dependency-versions.sh
src/: demo_with_figurine.rs  demo_with_simulated_figurine.rs  main.rs  main_full.rs  main_integration_demo.rs  typescript_bridge.rs
tests/integration/: Cargo.toml  event_flow_test.rs  module_registration_test.rs
(+41 files in other folders)
