[package]
name = "skelly-jelly-event-bus"
version = "0.1.0"
edition = "2021"
authors = ["Skelly-Jelly Team"]
description = "High-performance message broker for inter-module communication"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# High-performance channels and concurrency
crossbeam-channel = "0.5"
dashmap = "6.0"
parking_lot = "0.12"

# Message handling
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Collections and utilities
futures = "0.3"
once_cell = "1.20"

# Dependencies on other modules
skelly-jelly-storage = { path = "../storage", optional = true }
skelly-jelly-data-capture = { path = "../data-capture", optional = true }

[dev-dependencies]
# Testing
criterion = "0.5"
mockall = "0.13"
tempfile = "3.14"
test-log = "0.2"
tokio-test = "0.4"
serial_test = "3.2"

[features]
default = ["metrics"]
metrics = []
integration = ["skelly-jelly-storage", "skelly-jelly-data-capture"]