load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "storage",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:bincode",
        "@crate_index//:bytes",
        "@crate_index//:chrono",
        "@crate_index//:config",
        "@crate_index//:crossbeam-channel",
        "@crate_index//:dashmap",
        "@crate_index//:dirs",
        "@crate_index//:lru",
        "@crate_index//:lz4",
        "@crate_index//:parking_lot",
        "@crate_index//:prometheus",
        "@crate_index//:prost",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:sqlx",
        "@crate_index//:sysinfo",
        "@crate_index//:thiserror",
        "@crate_index//:tokio",
        "@crate_index//:tokio-stream",
        "@crate_index//:tracing",
        "@crate_index//:tracing-subscriber",
        "@crate_index//:uuid",
        "@crate_index//:zstd",
    ],
)

rust_test(
    name = "storage_test",
    srcs = glob(["tests/**/*.rs"]),
    deps = [
        ":storage",
        "@crate_index//:tempfile",
        "@crate_index//:tokio",
    ],
)

# Benchmarks
rust_test(
    name = "event_throughput_bench",
    srcs = ["benches/event_throughput.rs"],
    deps = [
        ":storage",
        "@crate_index//:criterion",
    ],
)

rust_test(
    name = "batch_creation_bench",
    srcs = ["benches/batch_creation.rs"],
    deps = [
        ":storage",
        "@crate_index//:criterion",
    ],
)

rust_test(
    name = "screenshot_processing_bench",
    srcs = ["benches/screenshot_processing.rs"],
    deps = [
        ":storage",
        "@crate_index//:criterion",
    ],
)